# libuta

./: .clang-format  .gitignore  3rd-party-notices.md  AUTHORS  CONTRIBUTING.md  COPYING  Doxyfile  EXPORT.md  INSTALL  MAINTAINERS  Makefile.am  NEWS  README.md  REUSE.toml  bootstrap  configure.ac  sonar-project.properties
.github/workflows/: main.yml  scorecard.yml  sonar.yml
debian/: changelog  compat.license  configure  control.in  copyright  hw.map  hw.map.license  libuta-generic.shlibs  rules.in
include/: tpm_ibm.h  tpm_tcg.h  uta.h  uta_sim.h
libuta_rust/: .gitignore  Cargo.toml  README.md  build.rs
libuta_rust/examples/: all.rs
libuta_rust/src/: bindings.h  bindings.rs  lib.rs
rust-bindings/: README.md
rust-bindings/examples/: Cargo.toml
rust-bindings/examples/src/: main.rs
rust-bindings/libuta_rust/: .gitignore  Cargo.toml  README.md  build.rs
rust-bindings/libuta_rust/src/: bindings.h  bindings.rs  lib.rs
src/lib/: Makefile.am  tpm_ibm.c  tpm_tcg.c  uta.c  uta_sim.c
src/provisioning/tpm_ibm/: Makefile.am  custom_hmac_key.c  install.sh  makefile.patch  provisioning.sh  uninstall.sh
src/provisioning/tpm_tcg/: provisioning.sh
src/tools/uta_get_passphrase/: Makefile.am  uta_get_passphrase_main.c
src/tools/uta_reg_test/: Makefile.am  uta_reg_test_main.c
