# Unified Trust Anchor API
#
# Copyright (c) Siemens Mobility GmbH, 2020
# 
# Authors:
#  Thomas Zeschg <thomas.zeschg@siemens.com>
#
# This work is licensed under the terms of the Apache Software License 2.0.  See
# the LICENSE file in the top-level directory.           
#               
# SPDX-License-Identifier: Apache-2.0

SUBDIRS = src/lib src/tools/uta_reg_test src/tools/uta_get_passphrase

distclean-local:
	rm -rf src/mbedtls
