# Unified Trust Anchor API Rust Wrapper
#
# Copyright (c) Siemens Mobility GmbH, 2025
#
# Authors:
#    Christian P. Feist <christian.feist@siemens.com>
#    Hermann Seuschek <hermann.seuschek@siemens.com>
#
# This work is licensed under the terms of the Apache Software License
# 2.0. See the COPYING file in the top-level directory.
#
# SPDX-FileCopyrightText: Copyright 2025 Siemens
# SPDX-License-Identifier: Apache-2.0
#
[package]
name = "libuta_rust"
license = "Apache-2.0"
description = "Rust wrapper for the Unified Trust Anchor API (libuta)"
repository = "https://github.com/siemens/libuta"
readme = "README.md"
version = "1.2.0"
authors = ["Christian P. Feist <christian.feist@siemens.com>", "Hermann Seuschek <hermann.seuschek@siemens.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.71.1"

[lib]
path = "src/lib.rs"

[profile.release]
opt-level = 0
lto = true
