# Unified Trust Anchor API
#
# Copyright (c) Siemens Mobility GmbH, 2022
#
# Authors:
#  Raphael Lisicki <raphael.lisicki@siemens.com>
#
# This work is licensed under the terms of the Apache Software License 2.0. See
# the COPYING file in the top-level directory.
#
# SPDX-License-Identifier: Apache-2.0

if HW_BACKEND_TPM_IBM
sbin_PROGRAMS = uta_custom_hmac_key
uta_custom_hmac_key_SOURCES = custom_hmac_key.c
endif

AUTOMAKE_OPTIONS = subdir-objects no-dependencies
